--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,13 +3,16 @@ image: hosttoday/ht-docker-node:npmts
 stages:
 - test
 - release
+- trigger
+- pages
 
 testLEGACY:
   stage: test
   script:
-    - npmci test lts
+    - npmci test legacy
   tags:
     - docker
+  allow_failure: true
 
 testLTS:
   stage: test
@@ -33,3 +36,24 @@ release:
     - tags
   tags:
     - docker
+
+trigger:
+  stage: trigger
+  script:
+    - npmci trigger
+  only:
+    - tags
+  tags:
+    - docker
+
+pages:
+  image: hosttoday/ht-docker-node:npmpage
+  stage: pages
+  script:
+    - npmci command npmpage --publish gitlab
+  only:
+    - tags
+  artifacts:
+    expire_in: 1 week
+    paths:
+    - public
