--- a/package.json
+++ b/package.json
@@ -23,15 +23,14 @@
   },
   "homepage": "https://gitlab.com/pushrocks/qenv#README",
   "devDependencies": {
-    "npmts-g": "^5.2.10",
-    "should": "^11.1.2",
+    "npmts-g": "^6.0.0",
+    "smartchai": "^1.0.1",
     "typings-test": "^1.0.3"
   },
   "dependencies": {
-    "beautylog": "^6.0.0",
-    "lodash": "^4.17.3",
+    "lodash": "^4.17.4",
     "q": "^1.4.1",
-    "smartfile": "^4.1.0",
+    "smartfile": "^4.1.3",
     "typings-global": "^1.0.14"
   }
 }
