--- a/package.json
+++ b/package.json
@@ -23,13 +23,11 @@
   },
   "homepage": "https://gitlab.com/pushrocks/qenv#README",
   "devDependencies": {
-    "npmts-g": "^6.0.0",
-    "smartchai": "^1.0.1",
-    "typings-test": "^1.0.3"
+    "tapbundle": "^1.0.12"
   },
   "dependencies": {
     "lodash": "^4.17.4",
-    "smartfile": "^4.1.3",
-    "typings-global": "^1.0.14"
+    "smartfile": "^4.2.11",
+    "typings-global": "^1.0.16"
   }
 }
