fix(core): update

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,23 +38,23 @@ snyk:
 # test stage
 # ====================
 
-testLTS:
+testStable:
   stage: test
   script:
   - npmci npm prepare
-  - npmci node install lts
+  - npmci node install stable
   - npmci npm install
   - npmci npm test
   coverage: /\d+.?\d+?\%\s*coverage/
   tags:
   - docker
-  - notpriv
+  - priv
 
 testBuild:
   stage: test
   script:
   - npmci npm prepare
-  - npmci node install lts
+  - npmci node install stable
   - npmci npm install
   - npmci command npm run build
   coverage: /\d+.?\d+?\%\s*coverage/
@@ -65,7 +65,7 @@ testBuild:
 release:
   stage: release
   script:
-  - npmci node install lts
+  - npmci node install stable
   - npmci npm publish
   only:
   - tags
@@ -100,7 +100,7 @@ trigger:
 pages:
   image: hosttoday/ht-docker-dbase:npmci
   services:
-   - docker:18-dind
+   - docker:stable-dind
   stage: metadata
   script:
     - npmci command npm install -g @gitzone/tsdoc
